--- a/index.html
+++ b/index.html
@@ -3,18 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Il Tuo Titolo</title>
-    
-    <!-- Collega il file CSS -->
+    <title>Sezione Div con 3 Colonne</title>
     <link rel="stylesheet" href="style.css">
-
-    <!-- Collega il file JavaScript -->
-    <script defer src="script.js"></script>
 </head>
 <body>
     <div class="container">
-        <h1>Benvenuto nel mio sito!</h1>
-        <p>Questo è un esempio di struttura base con CSS e JavaScript.</p>
+        <div class="column">Colonna 1</div>
+        <div class="column">Colonna 2</div>
+        <div class="column">Colonna 3</div>
     </div>
+  
+      <div class="container">
+        <div class="column">Colonna 1</div>
+        <div class="column">Colonna 2</div>
+        <div class="column">Colonna 3</div>
+        <div class="column">Colonna 4</div>
+    </div>
+  
+  
 </body>
 </html>
